refactoring /movies route to include release year and release dates in query instead of path
