# openapi/apis/movies.yaml
@@ -22,6 +22,34 @@ get:
         type: array
         items:
           type: string
+    - in: query
+      name: releaseYear
+      required: false
+      description: |
+        The release year to use for filtering the movies by release date. 
+        The release year must be between 1970 and 2050 inclusively.
+      schema:
+        type: integer
+    - in: query
+      name: releaseFrom
+      required: false
+      description: |
+        The release date as the starting point of date range to filter the movies by release date.
+        The release year must be between 1970 and 2050 inclusively. The date format is yyy-mm-dd.
+        For example, 2024-01-01 for January 1st 2024 or 2024-12-31 for December 31st 2024.
+      schema:
+        type: string
+        format: date
+    - in: query
+      name: releaseTo
+      required: false
+      description: |
+        The release date as the ending point of date range to filter the movies by release date.
+        The release year must be between 1970 and 2050 inclusively. The date format is yyy-mm-dd.
+        For example, 2024-01-01 for January 1st 2024 or 2024-12-31 for December 31st 2024.
+      schema:
+        type: string
+        format: date
   responses:
     '200':
       description: Successfully returned a list of movies for the given page
